Cookies with login signup

--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -6,3 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+Hello @User.Identity.Name
+<a asp-action="logout" asp-controller="account">
+    Log Out
+</a>
